# FactorAnalysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: tests.yml
examples/: anwendungsbeispiel.ipynb  anwendungsbeispiel.py  plot_big_five_personalities.ipynb  plot_big_five_personalities.py  plot_car_data.py  plot_liver_disorder.py  plot_wines_dataset.py
examples/data/: cal_housing_cleaned.csv
factor_analysis/: __init__.py  factor_analysis.py  plotting.py  utils.py
tests/: test_fa_validation.py  test_factor_analysis.py
tests/data/: application_example_backhaus_2021.CSV  application_example_backhaus_2021.xlsx
