[tool.poetry]
name = "Factor-Analysis-Wrapper"
version = "0.1.0"
description = "Exploratory Factor Analysis in Python"
authors = ["Moritz Mistol <moritz.mistol@gmail.com>"]
license = "GNU GPL v2"
readme = "README.md"
homepage = "https://github.com/MoritzM00/FactorAnalysis"
repository = "https://github.com/MoritzM00/FactorAnalysis"
classifiers=['Intended Audience :: Science/Research',
           'Intended Audience :: Developers',
           'Programming Language :: Python',
           'Topic :: Scientific/Engineering',
           'Operating System :: Microsoft :: Windows',
           'Operating System :: MacOS',
           'Programming Language :: Python :: 3.9',
           ]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "*"
scikit-learn = "1.0.2"
scipy = "1.7.3"
pandas = "*"
factor-analyzer = "*"
seaborn = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"
pre-commit ="*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
